# fulcrum-intelligence

./: .gitignore  .gitmodules  .pre-commit-config.yaml  CACHE.md  CLAUDE.md  Makefile  README.md  auth0-setup.md  docker-compose.yml  manage.py  pyproject.toml  render.py  sentry-setup.md
analysis_manager/: .coveragerc  .env.template  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  docker-compose.yml  gunicorn.conf.py  lambda.py  manage.py  pyproject.toml
analysis_manager/abhi_drafts/: primitives_comparative_analysis.py
analysis_manager/analysis_manager/: config.py  exceptions.py  health.py  lifespan.py  main.py
analysis_manager/analysis_manager/core/: crud.py  dependencies.py  routes.py  schema.py
analysis_manager/analysis_manager/db/: config.py  models.py  script_sessions.py
analysis_manager/analysis_manager/patterns/: __init__.py  manager.py
analysis_manager/analysis_manager/services/: query_manager_client.py
analysis_manager/analysis_manager/utilities/: crud.py  logger.py  middleware.py  pagination.py
analysis_manager/app/: config.py  health.py  main.py
analysis_manager/app/core/: crud.py  dependencies.py  models.py  routes.py  schema.py
analysis_manager/app/db/: config.py  models.py
analysis_manager/app/services/: query_manager_client.py
analysis_manager/app/utilities/: async_http_client.py  crud.py  logger.py  middleware.py  pagination.py
analysis_manager/data/: pattern_configs.json
analysis_manager/deployment/ecs/: env.json
analysis_manager/migrations/: env.py
analysis_manager/migrations/versions/: 20240618_0854_initial.py  20240618_1306_initial.py  20240620_1545_initial.py  20240621_1418_initial.py  20240730_1657_initial.py  20241007_1225_initial.py  2024_03_07_initial.py  2024_03_08_correlate_table.py  2024_03_08_describe_table.py  20250323_1653_initial_patterns.py  20250404_1429_pattern_config.py  20250410_2115_pattern_models.py  20250415_2222_add_grain_to_pattern_results.py  20250416_1733_pattern_results.py  20250508_2041_pattern_run_dimensional.py  20250522_1829_add_unique_constraint_to_pattern_config.py
analysis_manager/scripts/: db_utils.py  load_pattern_configs.py
analysis_manager/tests/data/: component_drift.json
analysis_manager/tests/unit/: conftest.py  test_db.py  test_session_v2.py  test_utils.py
asset_manager/: Dockerfile  Makefile  README.md  SEMANTIC_SYNC_MIGRATION.md  dagster-local.yaml  dagster-prod.yaml  docker-compose.yml  pyproject.toml  run.py  workspace.yaml
asset_manager/asset_manager/: __init__.py  definitions.py  partitions.py
asset_manager/asset_manager/assets/: __init__.py  patterns.py  snowflake_cache.py  stories.py  time_series.py
asset_manager/asset_manager/jobs/: __init__.py  cache_job.py  patterns.py  stories.py  time_series.py
asset_manager/asset_manager/resources/: __init__.py  config.py  db.py  snowflake.py
asset_manager/asset_manager/schedules/: __init__.py  daily_cache_schedule.py  snowflake_cache.py  time_series.py
asset_manager/asset_manager/sensors/: __init__.py  partition_sync_sensor.py  patterns.py  stories.py  time_series.py
asset_manager/asset_manager/services/: auth.py  pattern_data_organiser.py  patterns.py  semantic_loader.py  semantic_sync.py  snowflake_sync_service.py  stories.py  utils.py
asset_manager/deployment/: AWS_INFRA.md  DAGSTER_DEPLOYMENT.md  Makefile
asset_manager/deployment/ecs/: daemon-task-definition.json  env.json  run-task-definition.json  web-task-definition.json
commons/: .coveragerc  README.md  auth0-setup.md  pyproject.toml
commons/commons/: exceptions.py
commons/commons/auth/: auth.py  client_creds_auth.py  constants.py  machine_to_machine_auth.py  scopes.py
commons/commons/cache/: __init__.py  cache.py  keys.py  settings.py
commons/commons/clients/: analysis_manager.py  auth.py  base.py  email.py  insight_backend.py  prefect.py  query_manager.py  slack.py  snowflake.py  story_manager.py
commons/commons/db/: crud.py  engine.py  filters.py  models.py  session.py
commons/commons/llm/: constants.py  exceptions.py  prompts.py  (+4 more)
commons/tests/: test_async_http_client.py  test_json_utils.py  test_middlewares.py  test_migration_utils.py  test_utils.py
core/: .coveragerc  README.md  config.py  pyproject.toml
core/fulcrum_core/: __init__.py  analysis_manager.py  correlate.py  describe.py  enums.py  execptions.py  process_control.py  segment_drift.py
fulcrum_prefect/: Dockerfile  Makefile  README.md  prefect.yaml  pyproject.toml  run.py
fulcrum_prefect/fulcrum_prefect/: config.py  gen_stories.py  utils.py
insights_backend/: .coveragerc  .env.template  Dockerfile  README.md  alembic.ini  lambda.py  manage.py  pyproject.toml
insights_backend/deployment/: Makefile
insights_backend/insights_backend/: auth.py  config.py  exceptions.py  health.py  lifespan.py  main.py
insights_backend/migrations/: env.py
insights_backend/templates/: tenant_onboard_template.json
levers/: README.md  exceptions.md  pyproject.toml
levers/levers/: __init__.py  api.py  exceptions.py  registry.py
levers/tests/: README.md  __init__.py  conftest.py
query_manager/: .coveragerc  .env.template  .gitignore  Dockerfile  README.md  docker-compose.yml  lambda.py  manage.py  pyproject.toml
query_manager/app/: config.py  health.py  main.py
query_manager/deployment/: Makefile
query_manager/migrations/: env.py
query_manager/query_manager/: config.py  crud_test.py  exceptions.py  health.py  lifespan.py  main.py
query_manager/scripts/: generate_metric_targets.py
story_manager/: .coveragerc  .env.template  Dockerfile  Dockerfile.story_builder  README.md  manage.py  pyproject.toml
story_manager/migrations/: env.py
story_manager/story_manager/: config.py  exceptions.py  health.py  lifespan.py  main.py
tasks_manager/: .prefectconfig  Dockerfile  Makefile  README.md  prefect.local.yaml  prefect.yaml  pyproject.toml  run.py
tasks_manager/deployment/: Makefile
tasks_manager/scripts/: setup_prefect.sh  setup_prefect_worker_environment.sh
tasks_manager/tasks_manager/: __init__.py  config.py  start_worker.py  utils.py
(+655 files in other folders)
