[tool.poetry]
name = "fulcrum-intelligence"
version = "0.1.0"
description = "Fullcrum Intelligence is a tool for analyzing and visualizing data"
authors = ["leverslabs"]
package-mode = false

# Define dependencies common to all components
[tool.poetry.dependencies]
python = "^3.10"

# Define dependencies specific to the entire project
[tool.poetry.group.dev.dependencies]
ipython = "^7.29.0"
black = "^24.2.0"
pytest = "^8.0.2"
factory-boy = "^3.3.0"
pre-commit = "^3.6.2"
mypy = "^1.8.0"
isort = "^5.13.2"
honcho = "^1.1.0"
ruff = "^0.3.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
line_length = 120

[tool.black]
line-length = 120

[tool.mypy]
warn_unreachable = true
pretty = true
show_column_numbers = true
show_error_codes = true
show_error_context = true

[tool.ruff]
output-format = "concise"
line-length = 120
unsafe-fixes = true

[tool.ruff.lint]
ignore-init-module-imports = true
select = [
    "E", # https://docs.astral.sh/ruff/rules/#pycodestyle-e-w
    "F", # https://docs.astral.sh/ruff/rules/#pyflakes-f
    "UP", # https://docs.astral.sh/ruff/rules/#pyupgrade-up
    "I", # https://docs.astral.sh/ruff/rules/#isort-i
    "N", # https://docs.astral.sh/ruff/rules/#pep8-naming-n
    "S", # https://docs.astral.sh/ruff/rules/#flake8-bandit-s
    "B", # https://docs.astral.sh/ruff/rules/#flake8-bugbear-b
    "T20" # https://docs.astral.sh/ruff/rules/#flake8-print-t20
]
# rules to ignore
ignore = ["E722", "B024"]
