[tool.poetry]
name = "fulcrum-intelligence"
version = "0.1.0"
description = "Fullcrum Intelligence is a tool for analyzing and visualizing data"
authors = ["leverslabs"]
package-mode = false

# Define dependencies common to all components
[tool.poetry.dependencies]
python = "^3.10"
typer = "^0.9.0"
setuptools = "^67.0"


# Define dependencies specific to the entire project
[tool.poetry.group.dev.dependencies]
ipython = "^7.29.0"
black = "^24.2.0"
pytest = "^8.0.2"
factory-boy = "^3.3.0"
pre-commit = "^3.6.2"
mypy = "^1.8.0"
isort = "^5.13.2"
honcho = "^1.1.0"
ruff = "^0.3.2"
pytest-cov = "^5.0.0"
pytest-asyncio = "^0.23.6"
pytest-mock = "^3.14.0"
deepdiff = "^6.7.1"
testing-postgresql = "^1.3.0"

[build-system]
requires = ["poetry-core>=1.0.0,<2.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
line_length = 120
multi_line_output = 3
combine_as_imports = true
use_parentheses = true
force_grid_wrap = 4
include_trailing_comma = true
known_first_party = "app,commons,fulcrum_core,analysis_manager,query_manager,story_manager,insights_backend,tasks_manager"
skip_glob = ["core/fulcrum_core/modules/__init__.py", "commons/commons/db/signals/__init__.py"]

[tool.black]
line-length = 120

[tool.mypy]
warn_unreachable = true
pretty = true
show_column_numbers = true
show_error_codes = true
show_error_context = true
ignore_missing_imports = true
exclude = [
    "venv/",
    "query_manager/manage.py",
    "analysis_manager/manage.py",
    "story_manager/manage.py",
    "insights_backend/manage.py",
    # lambda
    "query_manager/lambda.py",
    "story_manager/lambda.py",
    "insights_backend/lambda.py",
    # Tests
    "query_manager/tests/",
    "analysis_manager/tests/",
    "story_manager/tests/",
    "core/tests/",
    "commons/tests/",
    "insights_backend/tests/",
    # Migrations
    "analysis_manager/migrations/",
    "story_manager/migrations/",
    "insights_backend/migrations/",
]

[tool.ruff]
output-format = "concise"
line-length = 120
unsafe-fixes = true
exclude = [
    "render.py"
]

[tool.ruff.lint]
ignore-init-module-imports = true
select = [
    "E", # https://docs.astral.sh/ruff/rules/#pycodestyle-e-w
    "F", # https://docs.astral.sh/ruff/rules/#pyflakes-f
    "UP", # https://docs.astral.sh/ruff/rules/#pyupgrade-up
    "N", # https://docs.astral.sh/ruff/rules/#pep8-naming-n
    "S", # https://docs.astral.sh/ruff/rules/#flake8-bandit-s
    "B", # https://docs.astral.sh/ruff/rules/#flake8-bugbear-b
    "T20" # https://docs.astral.sh/ruff/rules/#flake8-print-t20
]
# rules to ignore
ignore = ["E722", "B024", "S101"]
