[tool.poetry]
name = "analysis-manager"
version = "0.1.0"
description = "Analysis Manager for fulcrum intelligence"
authors = ["leverslabs"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.110.0"
uvicorn = "^0.27.1"
gunicorn = "^21.2.0"
pydantic = { extras = ["email", "dotenv"], version = "^2.6.3" }
hupper = "^1.12.1"
rich = "^13.7.1"
watchgod = "^0.8.2"
httpx = "^0.27.0"
pydantic-settings = "^2.2.1"
psycopg2-binary = "^2.9.9"
sqlmodel = "^0.0.16"
alembic = "^1.13.1"
asyncpg = "^0.29.0"
greenlet = "^3.0.3"
fulcrum-core = { path = "../core", develop = true }
typer = "^0.9.0"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "--cov=analysis_manager"
filterwarnings = "ignore::DeprecationWarning"
