[tool.poetry]
name = "analysis-manager"
version = "0.1.0"
description = "Analysis Manager for fulcrum intelligence"
authors = ["leverslabs"]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
fulcrum-core = { path = "../core" }
commons = { path = "../commons", extras = ["db"]}
levers = { path = "../levers"}

[build-system]
requires = ["poetry-core>=1.0.0,<2.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "--cov=analysis_manager"
filterwarnings = "ignore::DeprecationWarning"
