[tool.poetry]
name = "commons"
version = "1.0.0"
description = "Commons package for leverslabs"
authors = ["leverslabs"]
license = "Proprietary"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
pydantic = { extras = ["email", "dotenv"], version = "^2.7.4" }
httpx = "^0.27.0"
fastapi = "^0.115.6"
sqlalchemy = { version = "^2.0.29", optional = true }
sqlmodel = { version = "^0.0.16", optional = true }
psycopg2-binary = { version = "^2.9.9", optional = true }
alembic = { version = "^1.13.1", optional = true }
asyncpg = { version = "^0.29.0", optional = true }
greenlet = { version = "^3.0.3", optional = true }
pyjwt = "^2.8.0"
types-requests = "^2.32.0.20240712"
requests = "^2.32.3"
pandas = "^2.2.1"
slack-sdk = "^3.33.3"
langchain = "^0.3.9"
langchain-core = "^0.3.21"
langchain-openai = "^0.2.11"
langchain-anthropic = "^0.3.0"
pydantic-settings = "^2.6.1"

[tool.poetry.extras]
db = ["sqlmodel", "sqlalchemy", "psycopg2-binary", "alembic", "asyncpg", "greenlet"]

[build-system]
requires = ["poetry-core>=1.0.0,<2.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "--cov=commons"
filterwarnings = "ignore::DeprecationWarning"
