[tool.poetry]
name = "commons"
version = "1.0.0"
description = "Commons package for leverslabs"
authors = ["leverslabs"]
license = "Proprietary"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
uvicorn = "^0.27.1"
fastapi = "^0.115.6"
pydantic = { extras = ["email"], version = "^2.7.4" }
pydantic-settings = "^2.6.1"
httpx = "^0.27.0"
requests = "^2.32.3"
typer = "^0.12.0"
anyio = ">=3.5.0,<5.0.0"
sqlalchemy = { version = "^2.0.29", optional = true }
sqlmodel = { version = "^0.0.16", optional = true }
psycopg2-binary = { version = "^2.9.9", optional = true }
alembic = { version = "^1.13.1", optional = true }
asyncpg = { version = "^0.29.0", optional = true }
greenlet = { version = "^3.0.3", optional = true }
pyjwt = "^2.8.0"
cryptography = "42.0.8"
boto3 = "^1.34.69"
botocore = ">=1.34.41,<1.34.70"
aioboto3 = "^12.4.0"
langchain = "^0.3.9"
langchain-core = "^0.3.21"
langchain-openai = "^0.2.11"
langchain-anthropic = "^0.3.0"
pandas = "^2.2.1"
numpy = "^1.24.3"
blinker = "^1.9.0"
rich = "^13.7.1"
jinja2 = "^3.1.3"
python-dateutil = "^2.9.0.post0"
email-validator = "^2.2.0"
aiofiles = "^23.2.1"
slack-sdk = "^3.33.3"
pyyaml = "^6.0.2"
setuptools = "65.5.0"
pydantic-extra-types = "^2.10.3"

[tool.poetry.extras]
db = ["sqlmodel", "sqlalchemy", "psycopg2-binary", "alembic", "asyncpg", "greenlet", "blinker"]

[build-system]
requires = ["poetry-core>=1.0.0,<2.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "--cov=commons"
filterwarnings = "ignore::DeprecationWarning"
