[tool.poetry]
name = "fulcrum-core"
version = "0.1.0"
description = "Core Engine for fulcrum intelligence"
authors = ["leverslabs"]
license = "Proprietary"

[tool.poetry.dependencies]
python = "^3.10"
pydantic = { extras = ["email", "dotenv"], version = "^2.6.3" }
pandas = "^2.2.1"
numpy = "^1.26.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
