[tool.poetry]
name = "fulcrum-core"
version = "0.1.0"
description = "Core Engine for fulcrum intelligence"
authors = ["leverslabs"]
license = "Proprietary"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
pydantic = { extras = ["email", "dotenv"], version = "^2.6.3" }
pandas = "^2.2.1"
numpy = "^1.26.4"
pandas-stubs = "^2.2.0.240218"
pmdarima = "^2.0.4"
scipy = "^1.13.0"
scikit-learn = "^1.5.0"
httpx = "^0.27.0"
networkx = "3.2.1"
dowhy = "^0.11.1"
prophet = "^1.1.5"
sympy = "^1.13.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "--cov=fulcrum_core"
filterwarnings = "ignore::DeprecationWarning"
