[tool.poetry]
name = "fulcrum-core"
version = "0.1.0"
description = "Core Engine for fulcrum intelligence"
authors = ["leverslabs"]
license = "Proprietary"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
numpy = "^1.24.3"
pandas = "^2.2.1"
scipy = "^1.13.0"
scikit-learn = "^1.5.0"
pmdarima = "^2.0.4"
matplotlib = "^3.9.2"
sympy = "^1.13.1"
networkx = "^3.2.1"
prophet = "^1.1.5"
dowhy = "0.11.0"
httpx = "^0.27.0"
anyio = ">=3.5.0,<5.0.0"
pydantic = { extras = ["email"], version = "^2.7.4" }
pandas-stubs = "^2.2.0.240218"

[build-system]
requires = ["poetry-core>=1.0.0,<2.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "--cov=fulcrum_core"
filterwarnings = "ignore::DeprecationWarning"
