[tool.poetry]
name = "insights-backend"
version = "0.1.0"
description = "Insight Backend for user management for fulcrum intelligence"
authors = ["leverslabs"]
license = "Proprietary"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
fastapi = "^0.115.6"
uvicorn = "^0.27.1"
hupper = "^1.12.1"
rich = "^13.7.1"
watchgod = "^0.8.2"
pandas = "^2.2.1"
typer = "^0.9.0"
mangum = "^0.17.0"
commons = { path = "../commons", extras = ["db"] }
jinja2 = "^3.1.3"
httpx = "^0.27.0"
python-dateutil = "^2.9.0.post0"
types-python-dateutil = "^2.9.0.20240316"
email-validator = "^2.2.0"
cryptography = "^42.0.8"
slack-sdk = "^3.33.4"
pydantic-extra-types = "^2.10.2"
faker = "^36.1.1"

[build-system]
requires = ["poetry-core>=1.0.0,<2.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "--cov=insights_backend"
filterwarnings = "ignore::DeprecationWarning"
