[tool.poetry]
name = "insights-backend"
version = "0.1.0"
description = "Insight Backend for user management for fulcrum intelligence"
authors = ["leverslabs"]
license = "Proprietary"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
commons = { path = "../commons", extras = ["db"] }
faker = "^36.1.1"

[build-system]
requires = ["poetry-core>=1.0.0,<2.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "--cov=insights_backend"
filterwarnings = "ignore::DeprecationWarning"
