[tool.poetry]
name = "query-manager"
version = "0.1.0"
description = "Query Manager for fulcrum intelligence"
authors = ["leverslabs"]
license = "Proprietary"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
fastapi = "^0.115.6"
uvicorn = "^0.27.1"
pydantic = { extras = ["email", "dotenv"], version = "^2.7.4" }
hupper = "^1.12.1"
rich = "^13.7.1"
watchgod = "^0.8.2"
httpx = "^0.27.0"
aiofiles = "^23.2.1"
types-aiofiles = "^23.2.0.20240311"
pandas = "^2.2.1"
typer = "^0.9.0"
aioboto3 = "^12.3.0"
pyarrow = "^15.0.2"
mangum = "^0.17.0"
commons = { path = "../commons", extras = ["db"] }
jinja2 = "^3.1.4"
types-pyyaml = "^6.0.12.20241230"

[tool.poetry.group.dev.dependencies]
moto = "^5.0.4"

[build-system]
requires = ["poetry-core>=1.0.0,<2.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.pytest.ini_options]
addopts = "--cov=query_manager"
filterwarnings = "ignore::DeprecationWarning"
