[tool.poetry]
name = "query-manager"
version = "0.1.0"
description = "Query Manager for fulcrum intelligence"
authors = ["leverslabs"]
license = "Proprietary"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
pyarrow = "^15.0.2"
commons = { path = "../commons", extras = ["db"] }


[tool.poetry.group.dev.dependencies]
moto = "^5.0.4"

[build-system]
requires = ["poetry-core>=1.0.0,<2.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.pytest.ini_options]
addopts = "--cov=query_manager"
filterwarnings = "ignore::DeprecationWarning"
