[tool.poetry]
name = "story-manager"
version = "0.1.0"
description = "Story Manager for fulcrum intelligence"
authors = ["leverslabs"]
license = "Proprietary"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
uvicorn = "^0.27.1"
hupper = "^1.12.1"
rich = "^13.7.1"
typer = "^0.12.0"
mangum = "^0.17.0"
commons = { path = "../commons", extras = ["db"] }
fulcrum-core = { path = "../core" }
jinja2 = "^3.1.3"
python-dateutil = "^2.9.0.post0"
types-python-dateutil = "^2.9.0.20240316"
plotly = "^5.24.1"


[build-system]
requires = ["poetry-core>=1.0.0,<2.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.pytest.ini_options]
addopts = "--cov=story_manager"
filterwarnings = "ignore::DeprecationWarning"
