[tool.poetry]
name = "story-manager"
version = "0.1.0"
description = "Story Manager for fulcrum intelligence"
authors = ["leverslabs"]
license = "Proprietary"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
commons = { path = "../commons", extras = ["db"] }
fulcrum-core = { path = "../core" }
plotly = "^5.24.1"

[build-system]
requires = ["poetry-core>=1.0.0,<2.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "--cov=story_manager"
filterwarnings = "ignore::DeprecationWarning"
