[tool.poetry]
name = "tasks-manager"
version = "0.1.0"
description = "Tasks Manager is a tool for running scheduled/background jobs asynchronously"
authors = ["leverslabs"]
package-mode = false


[tool.poetry.dependencies]
python = ">=3.10,<3.12"
prefect = "^3.1.7"
story-manager = { path = "../story_manager"}
query-manager = { path = "../query_manager"}
commons = { path = "../commons"}
levers = { path = "../levers"}


[build-system]
requires = ["poetry-core>=1.0.0,<2.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.pytest.ini_options]
addopts = "--cov=tasks_manager"
filterwarnings = "ignore::DeprecationWarning"
